# datbac-2025

ble_aod_positioning/beacon/: CMakeLists.txt  prj.conf
ble_aod_positioning/beacon/boards/: nrf52833dk_nrf52833.overlay
ble_aod_positioning/beacon/examples/: README.md  beacon_1_log.txt  beacon_3_log.txt
ble_aod_positioning/beacon/src/: main.c
ble_aod_positioning/experiments/2025_04_24_skaarlia_tunnel/: README.md
ble_aod_positioning/experiments/2025_04_24_skaarlia_tunnel/data/: test_1_coordinates.csv  test_2_coordinates.csv  test_3_coordinates.csv
ble_aod_positioning/experiments/2025_04_24_skaarlia_tunnel/scripts/: calculate_test_ground_truths.py  extract_test_coordinates.py  process_test_coordinates.py
ble_aod_positioning/locator/: CMakeLists.txt  prj.conf
ble_aod_positioning/locator/examples/: README.md  locator_log.txt
ble_aod_positioning/locator/src/: beacon.c  beacon.h  beacon_database.c  beacon_database.h  ble_channel_constants.c  ble_channel_constants.h  bt_addr_utils.c  bt_addr_utils.h  chw1010_ant2_specs.c  chw1010_ant2_specs.h  directional_statistics.c  directional_statistics.h  iq_data.c  iq_data.h  iq_data_work_queue.c  iq_data_work_queue.h  locator.c  locator.h  main.c
ble_aod_positioning/misc/: calculate_antenna_positions.c  calculate_cte.c  calculate_wavelengths.c  calculate_wavenumbers.c
ble_aod_positioning/misc/cte_constants_DO_NOT_USE/: cte_constants_DO_NOT_USE.c  cte_constants_DO_NOT_USE.h
